# azure-contain

./: Cargo.toml
containers/: ai.toml  apple-music.toml  av-tests.toml  claude.toml  claude2.toml  docker.toml  foundry.toml  invokeai.toml  league.toml  llms-2024.toml  retro-games.toml  skirmish.toml  steam.toml  superresolution.toml
src/: main.rs  structs.rs
