[package]
name = "azure-contain"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
filetime = "0.2"
once_cell = "1.17"
nix = "0.26"
mountinfo = "0.2"
dynfmt = { version = "0.1", features = ["curly"] }


[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
target-cpu = "native"


